- add nodemailer (WIP)

--- a/watch/package.json
+++ b/watch/package.json
@@ -5,6 +5,8 @@
   "main": "app.js",
   "dependencies": {
     "express": "^4.17.1",
+    "nodemailer": "^6.4.11",
+    "nodemailer-mailgun-transport": "^2.0.0",
     "sendgrid": "^5.2.3"
   },
   "devDependencies": {
