- use sendgrid for contact form - remove latest updates sample text - merge master into 1-contact-email

--- a/watch/package.json
+++ b/watch/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "@sendgrid/mail": "^7.2.4",
     "express": "^4.17.1",
     "nodemailer": "^6.4.11",
     "nodemailer-mailgun-transport": "^2.0.0",
