--- a/watch/package.json
+++ b/watch/package.json
@@ -5,10 +5,14 @@
   "main": "app.js",
   "dependencies": {
     "@sendgrid/mail": "^7.2.4",
+    "cheerio": "^1.0.0-rc.3",
     "express": "^4.17.1",
     "nodemailer": "^6.4.11",
     "nodemailer-mailgun-transport": "^2.0.0",
-    "sendgrid": "^5.2.3"
+    "request": "^2.88.2",
+    "sendgrid": "^5.2.3",
+    "twit": "^2.2.11",
+    "twitter": "^1.7.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
