--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@sendgrid/mail": "^7.2.4",
     "cheerio": "^1.0.0-rc.3",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "nodemailer": "^6.4.11",
     "nodemailer-mailgun-transport": "^2.0.0",
