--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-SENDGRID_API_KEY=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
+SENDGRID_API_KEY=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
+
 
 TWITTER_API_KEY=lxI2z1OEsOw4m6JgLUtpZwVoU
 TWITTER_API_SECRET_KEY=4e3jSrbUTx2v2K5RattuE3o4yizbs0PR3wSz4AE6QZTGOO4iAK
